tests/cases/parser/token_macros/incomplete_token_macros.stderr
error: unexpectedly encountered a `.`
 --> $DIR/incomplete_token_macros.hash:4:15
3 |   // ~ERROR: expected token tree here...
4 |   { @[invoke()] . }
  |                 ^ 
  = help: expected either `(`, `{`, or `[`
