tests/cases/parser/token_macros/incomplete_token_macros.hash
// stage=parse, run=fail

// ~ERROR: expected token tree here...
{ @[invoke()] . }
